[gd_scene load_steps=12 format=2]

[ext_resource path="res://Farmer.gd" type="Script" id=1]
[ext_resource path="res://farmer-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Sound/TheTaterTrot.mp3" type="AudioStream" id=3]
[ext_resource path="res://Sound/laser.wav" type="AudioStream" id=4]
[ext_resource path="res://Sound/death_trim.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=6]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("Farmer:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Farmer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.75, 0.75 ), Vector2( 0.5, 0.5 ), Vector2( 0.25, 0.25 ), Vector2( 1, 1 ) ]
}

[node name="Farmer" type="Area2D" groups=["player"]]
script = ExtResource( 1 )

[node name="Farmer" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Center" type="Position2D" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="StationaryTimer" type="Timer" parent="."]

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -8.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 6 )

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="area_entered" from="." to="." method="_on_Farmer_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Farmer_body_entered"]
[connection signal="timeout" from="StationaryTimer" to="." method="_on_StationaryTimer_timeout"]
